Thu Oct 31 12:57:10 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS.i (fstat): Added check for FILE_ATTRIBUTE_DIRECTORY on
	  Win32 to set the file type in the st_mode so one can determine
	  if it's a file or a directory.  Thanks to Paul Marquis
	  <pmarquis@pobox.com> for submitting the patch.

Wed Oct 30 13:47:14 2002  Steve Huston  <shuston@riverace.com>

        * ace/Thread_Exit.cpp: Add #include "ace/Managed_Object.h" to get
	  the definition of ACE_Managed_Object.

Wed Oct 30 11:38:36 2002  Irfan Pyarali  <irfan@oomworks.com>

	* ace/Timeprobe.h: Fixed formatting of comments that somehow got
	  messed up in:

	  http://cvs.doc.wustl.edu/viewcvs.cgi/ace/Timeprobe.h.diff?r1=4.29&r2=4.30

Tue Oct 29 22:27:24 2002  Frank Hunleth <frank@hunleth.com>

	* apps/gperf/src/Key_List.cpp: Added cast to int on UCHAR_MAX and
	  USHRT_MAX to remove warnings of comparing signed and unsigned
	  values under OpenBSD.

	* ace/config-openbsd.h:
	* ace/config-openbsd-pthread.h: Added ACE_HAS_MKSTEMP since
	  OpenBSD has the mkstemp() function, and it helps clear up
	  linker warnings.  Also added ACE_HAS_ALT_CUSERID to clear
          up errors due to _cuserid().  Thanks to Craig Rodrigues
          for the latter patch.

Tue Oct 29 15:45:06 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Exit.h:
	* ace/Thread_Exit.cpp:
	* ace/Thread_Manager.h:
	* ace/Thread_Manager.cpp: Changed to use ACE_Thread_Manager to
	  clean up the global TSS ACE_Thread_Exit object instead of
	  depending on the more general ACE_Object_Manager::at_exit method
	  so we can better control the order of destruction.  The change
	  makes sure the global TSS ACE_Thread_Exit object will only get
	  deleted *after* ACE_Thread_Manager has cleaned up all threads
	  and destroyed itself.

	  Thanks to Patrick McNerthney <pat@mcnerthney.com> for reporting
	  the problem.

Tue Oct 29 16:19:54 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/INET_Addr.cpp:
	* ace/INET_Addr.i:
	* ace/INET_Addr.h: